apps/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
spec:
  selector:
    name: mealie
  ports:
  - port: 80
    targetPort: 80
